Bug 419239 - Plasma applets popups are not flagged SkipSwitcher
Summary: Plasma applets popups are not flagged SkipSwitcher
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.18.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords:
: 337992 424167 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-25 16:36 UTC by Michail Vourlakos
Modified: 2021-07-27 14:00 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2020-03-25 16:36:16 UTC
SUMMARY
title describes it exactly

STEPS TO REPRODUCE
1. open plasma systray popup
2. trigger KWin Switcher with Alt+Tab


OBSERVED RESULT
plasma systray popup is shown into the Switcher window list

EXPECTED RESULT
plasma systray popup should not be part of the switcher window list

SOFTWARE/OS VERSIONS
(available in About System)
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 1 Patrick Silva 2020-06-15 13:29:21 UTC
Reproducible on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 2 Patrick Silva 2020-06-18 11:14:37 UTC
Enabling "Synchronize skip switcher with taskbar" in KWin Scripts kcm
fixes this issue.
Comment 3 Nate Graham 2020-07-17 02:09:52 UTC
*** Bug 424167 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2020-07-17 02:19:46 UTC
Affecting me on X11 too, so it's not just Wayland.
Comment 5 Bug Janitor Service 2020-07-17 02:20:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/38
Comment 6 Nate Graham 2020-07-17 02:46:20 UTC
Git commit a707731607c5accbc99e813fc3fd3422eec53483 by Nate Graham.
Committed on 17/07/2020 at 02:18.
Pushed by ngraham into branch 'master'.

Don't show Plasma dialogs in task switchers

Plasma dialogs are already marked as not being shown in the task manager
and the pager. We should similarly omit them from the task switcher, for
the same reasons.
FIXED-IN: 5.73

M  +3    -3    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/a707731607c5accbc99e813fc3fd3422eec53483
Comment 7 popov895 2020-07-17 07:36:23 UTC
Thanks!
Comment 8 Nate Graham 2020-07-17 13:32:45 UTC
You're welcome!
Comment 9 Patrick Silva 2020-10-16 22:12:03 UTC
it's reproducible again at least on Wayland session unless "Synchronize skip switcher with taskbar" is enabled in KWin Scripts kcm.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Comment 10 Nate Graham 2021-03-20 01:45:43 UTC
*** Bug 337992 has been marked as a duplicate of this bug. ***
Comment 11 popov895 2021-07-26 20:54:49 UTC
Looks like this has already been fixed.
Comment 12 Nate Graham 2021-07-27 14:00:37 UTC
Ah yes, it was.